# panorama_viewer

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  opengl_renderer.cpp  opengl_renderer.h  quick_view.cpp  quick_view.h  resources.qrc
src/assets/: app.qml  texture.frag  texture.vert
